<resources>
    <string name="app_name">lesson4</string>
    <string name="back">Back</string>
    <string name="film_name">Avengers: End Game</string>
    <string name="genres">Action, Adventure, Fantasy</string>
    <string name="num_reviews">REVIEWS</string>
    <string name="storyline">Storyline</string>
    <string name="storyline_text">After the devastating events of Avengers: Infinity War,
        the universe is in ruins. With the help of remaining allies, the Avengers assemble
        once more in order to reverse Thanos actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="age">13+</string>
    <string name="ironMan">Robert Downey Jr.</string>
    <string name="captainA">Chris Evans</string>
    <string name="hulk">Mark Ruffalo</string>
    <string name="thor">Chris Hemsworth</string>
    <string name="duration">MIN</string>
    <string name="movies_list">Movies list</string>
    <string name="robert">Robert \nDowney Jr.</string>
    <string name="avengers_nend_game">Avengers:\nEnd Game</string>
    <string name="action_adventure_fantasy">Action,Adventure, Fantasy</string>
    <string name="reviews">reviews</string>
    <string name="after_the_devastating_events_of_avengers_infinity_war_the_universe_is_in_ruins_with_the_help_of_remaining_allies_the_avengers_assemble_once_more_in_order_to_reverse_thanos_actions_and_restore_balance_to_the_universe">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="ages">+13</string>
    <string name="min">min</string>
    <string name="bad_connection">bad connection</string>
</resources>