<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="6dp"
    android:background="#191926"
    android:maxHeight="280dp"
    android:elevation="2dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="6dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="6dp"/>

    <ImageView
        android:id="@+id/iv_banner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_movies_item_header_avengers"
        app:layout_constraintBottom_toBottomOf="@id/rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />
    <ImageView
        android:id="@+id/iv_mask_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:layout_margin="1dp"
        android:src="@drawable/mask_1"
        app:layout_constraintBottom_toBottomOf="@id/rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_favorite_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:src="@drawable/ic_favorite"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_film_number"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_heavy_rounded_rect_background_dark_blue"
        android:gravity="center"
        android:text="@string/ages"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/iv_favorite_icon"
        app:layout_constraintTop_toTopOf="@id/iv_favorite_icon" />



    <TextView
        android:id="@+id/tv_film_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/action_adventure_fantasy"
        android:textColor="#FF3466"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@id/rating"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start" />

    <RatingBar
        android:id="@+id/rating"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:progressBackgroundTint="@color/grey"
        android:progressTint="@color/pink"
        android:rating="4"
        android:stepSize="0.5"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintBottom_toTopOf="@+id/tv_film_name_text" />
    <TextView
        android:id="@+id/tv_movie_reviews_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:textColor="#6D6D80"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/rating"
        app:layout_constraintEnd_toEndOf="@id/rating"
        app:layout_constraintStart_toEndOf="@+id/rating" />

    <TextView
        android:id="@+id/tv_film_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/avengers_nend_game"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/tv_film_time_text" />



    <TextView
        android:id="@+id/tv_film_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/min"
        android:textColor="#6D6D80"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_film_name_text"

        />

</androidx.constraintlayout.widget.ConstraintLayout>
