<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:overScrollMode="never"
    tools:context=".view.MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_root_left"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_root_right"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/iv_top_background"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:scaleType="centerCrop"
            android:src="@drawable/orig"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/button_arrow_image_back"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="18dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@id/tv_back"
            app:layout_constraintTop_toTopOf="@id/tv_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline_root_left"/>

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="56dp"
            android:text="back"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/button_arrow_image_back"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/ages"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_movie_name"
            app:layout_constraintStart_toEndOf="@id/guideline_root_left"/>
        <TextView
            android:id="@+id/tv_movie_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="254dp"
            android:text="@string/avengers_nend_game"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline_root_right"
            app:layout_constraintStart_toEndOf="@+id/guideline_root_left"
            app:layout_constraintTop_toTopOf="@+id/iv_top_background"/>
        <TextView
            android:id="@+id/tv_movie_tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/action_adventure_fantasy"
            android:textColor="#FF3466"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_root_right"
            app:layout_constraintStart_toEndOf="@+id/guideline_root_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_name" />

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:numStars="5"
            android:progressBackgroundTint="@color/grey"
            android:progressTint="@color/pink"
            android:rating="4"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:stepSize="0.5"
            android:transformPivotY="0dp"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_tags"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_movie_reviews_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/reviews"
            android:textAllCaps="true"
            android:textColor="#6D6D80"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline_root_right"
            app:layout_constraintStart_toEndOf="@+id/rating"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_tags" />

        <TextView
            android:id="@+id/tv_movie_storyline_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Storyline"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline_root_right"
            app:layout_constraintStart_toEndOf="@+id/guideline_root_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_reviews_count" />

        <TextView
            android:id="@+id/tv_movie_storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/after_the_devastating_events_of_avengers_infinity_war_the_universe_is_in_ruins_with_the_help_of_remaining_allies_the_avengers_assemble_once_more_in_order_to_reverse_thanos_actions_and_restore_balance_to_the_universe"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_root_right"
            app:layout_constraintStart_toEndOf="@+id/guideline_root_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_storyline_title" />

        <TextView
            android:id="@+id/tv_movie_cast_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Cast"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline_root_right"
            app:layout_constraintStart_toEndOf="@+id/guideline_root_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_storyline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_actor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guideline_root_right"
            app:layout_constraintStart_toEndOf="@id/guideline_root_left"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_cast_title"
            tools:listitem="@layout/item_actor"/>


    </androidx.constraintlayout.widget.ConstraintLayout>





</ScrollView>